# worry-free-crab

./: .gitignore  .local-ci.toml  Cargo.toml  flake.nix  propel.toml  result
.github/scripts/: validate-docs.ts
.github/workflows/: ci-docs.yml  ci.yml  fast-free-testing.yml  fft.yml  local-ci.yml
.github/workflows/disabled/: fast-free-testing.yml  fft.yml  local-ci.yml
crates/local-ci-cache/: Cargo.toml
crates/local-ci-cache/src/: lib.rs
crates/local-ci-checks/: Cargo.toml
crates/local-ci-checks/src/: advisories.json  github_checks.rs  lib.rs  linter.rs  s3.rs  secrets.rs  vulnerability.rs
crates/local-ci-cli/: Cargo.toml
crates/local-ci-cli/src/: main.rs
crates/local-ci-cli/tests/: cli_integration.rs
crates/local-ci-core/: Cargo.toml
crates/local-ci-core/src/: lib.rs
crates/local-ci-detect/: Cargo.toml
crates/local-ci-detect/src/: lib.rs
crates/local-ci-exec/: Cargo.toml
crates/local-ci-exec/src/: lib.rs
crates/local-ci-exec/tests/: remote_execution.rs
crates/local-ci-report/: Cargo.toml
crates/local-ci-report/src/: lib.rs
crates/local-ci-report/tests/: report_output.rs
intent/: current.yaml
