[workspace]
members = [
    "crates/local-ci-core",
    "crates/local-ci-detect",
    "crates/local-ci-exec",
    "crates/local-ci-cache",
    "crates/local-ci-report",
    "crates/local-ci-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
md5 = "0.7"
clap = { version = "4.4", features = ["derive"] }
local-ci-core = { path = "crates/local-ci-core" }
local-ci-detect = { path = "crates/local-ci-detect" }
local-ci-exec = { path = "crates/local-ci-exec" }
local-ci-cache = { path = "crates/local-ci-cache" }
local-ci-report = { path = "crates/local-ci-report" }
