[package]
name = "local-ci-checks"
version = "0.3.0"
edition = "2021"
description = "Fast Free Testing (FFT) adapter checks including vulnerability scanning, config linting, and secrets scanning."

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
glob = { workspace = true }
local-ci-core = { workspace = true }
