[package]
name = "local-ci-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
local-ci-core = { workspace = true }
local-ci-detect = { workspace = true }
local-ci-exec = { workspace = true }
local-ci-cache = { workspace = true }
local-ci-report = { workspace = true }
local-ci-checks = { workspace = true }
