[package]
name = "local-ci-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
clap = { workspace = true }
local-ci-core = { workspace = true }
local-ci-detect = { workspace = true }
local-ci-exec = { workspace = true }
local-ci-cache = { workspace = true }
local-ci-report = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
local-ci-checks = { workspace = true }
